Search Overlay Preparation - Fixed some scrollbar problems

--- a/stylus/elements/popover.styl
+++ b/stylus/elements/popover.styl
@@ -51,7 +51,7 @@
 		border-bottom: 1px solid #ddd
 		margin: 10px 0px
 	li
-		@extend .functional-list
+		@extend $functional-list
 		padding: 6px;
 	.icon
 		color: sidebar-text-color
