--- a/stylus/framework/chat-content.styl
+++ b/stylus/framework/chat-content.styl
@@ -7,14 +7,18 @@
 		height: 100%
 		overflow: auto
 		float: left
-	.chat
+	.chat-wrapper
+		position: relative
 		background: chat-background
 		overflow: auto
 		height: 100%
-		padding: 10px 0 footer-height 0
+		padding: 0 0 footer-height 0
+		.chat
+			height: 100%
+			position: relative
 		.chatline
 			@extend $clearfix
-			margin: 0 30px 20px 20px
+			margin: 10px 30px 10px 20px
 			position: relative
 			.avatar
 				float: left
