--- a/stylus/framework/sidebar.styl
+++ b/stylus/framework/sidebar.styl
@@ -30,7 +30,7 @@ a.nav-title-wrap, .nav-list a //Sidebar Link Styling
 		color: sidebar-button-hover-text-color
 
 .nav-title-wrap
-	@extend .hoverable
+	@extend $hoverable
 	@extend $clearfix
 	display: block
 	padding-bottom: 6px
@@ -48,7 +48,7 @@ a.nav-title-wrap, .nav-list a //Sidebar Link Styling
 .nav-list
 	margin-bottom: 12px
 	.item
-		@extend .functional-list
+		@extend $functional-list
 		a
 			display: block
 			padding: 7px 12px 3px 8px
